--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,8 +1,8 @@
 
 foo = foo version 2
 label = master
-profiles=dev
-version=792ffc77c03f4b138d28e89b576900ac5e01a44b
+profiles = dev
+version = 792ffc77c03f4b138d28e89b576900ac5e01a44b
 democonfigclient.message=hello spring io
 
 # routes to serviceId
